--- a/suzuki/src/main/AndroidManifest.xml
+++ b/suzuki/src/main/AndroidManifest.xml
@@ -15,9 +15,8 @@
     <uses-permission android:name="android.permission.ANSWER_PHONE_CALLS" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.ACTION_REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <!--     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />-->
-    <!--    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />-->
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> <!-- <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" /> -->
+    <!-- <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" /> -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -31,10 +30,8 @@
 <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     -->
-
-    <!--<uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED" /> &lt;!&ndash; <uses-permission android:name="android.permission.CAMERA"/> &ndash;&gt;-->
-    <uses-permission android:name="android.permission.CAMERA"/>
-
+    <!-- <uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED" /> &lt;!&ndash; <uses-permission android:name="android.permission.CAMERA"/> &ndash;&gt; -->
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission
         android:name="android.permission.READ_LOGS"
         tools:ignore="ProtectedPermissions" />
@@ -43,14 +40,12 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.CBIND_NOTIFICATION_LISTENER_SERVICEALL_PHONE" />
     <uses-permission android:name="android.permission.ACCESS_GPS" />
-    <uses-permission android:name="android.permission.MODIFY_PHONE_STATE"
-        tools:ignore="ProtectedPermissions" />
-    <!-- <uses-permission android:name="android.permission.MODIFY_PHONE_STATE" /> -->
+    <uses-permission
+        android:name="android.permission.MODIFY_PHONE_STATE"
+        tools:ignore="ProtectedPermissions" /> <!-- <uses-permission android:name="android.permission.MODIFY_PHONE_STATE" /> -->
     <uses-permission android:name="android.Manifest.permission.READ_PHONE_STATE" /> <!-- <uses-permission android:name="android.permission.WRITE_CONTACTS" /> -->
-    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
-    <!--    <uses-permission android:name="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" /> &lt;!&ndash; <uses-permission android:name="android.permission.ANSWER_PHONE_CALLS" /> &ndash;&gt;-->
-    <!--    <uses-permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE" />-->
-
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" /> <!-- <uses-permission android:name="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" /> &lt;!&ndash; <uses-permission android:name="android.permission.ANSWER_PHONE_CALLS" /> &ndash;&gt; -->
+    <!-- <uses-permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE" /> -->
     <uses-permission android:name="oppo.permission.OPPO_COMPONENT_SAFE" />
     <uses-permission android:name="com.huawei.permission.external_app_settings.USE_COMPONENT" />
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
@@ -59,18 +54,14 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
 
-    <uses-feature android:name="android.hardware.sensor.accelerometer" />
-
-
-    <!--    <uses-permission android:name="android.permission.BLUETOOTH" />-->
-    <!--    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />-->
-
-        <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
-        <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"
-            />
-        <uses-permission android:name="android.permission.BLUETOOTH_SCAN"
-            android:usesPermissionFlags="neverForLocation"
-            tools:targetApi="s" />
+    <uses-feature android:name="android.hardware.sensor.accelerometer" /> <!-- <uses-permission android:name="android.permission.BLUETOOTH" /> -->
+    <!-- <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> -->
+    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission
+        android:name="android.permission.BLUETOOTH_SCAN"
+        android:usesPermissionFlags="neverForLocation"
+        tools:targetApi="s" />
 
     <uses-feature
         android:name="android.hardware.telephony"
@@ -78,6 +69,10 @@
     <uses-feature
         android:name="android.hardware.camera.any"
         android:required="true" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" />
+
     <application
         android:name=".application.SuzukiApplication"
         android:allowBackup="true"
@@ -87,42 +82,52 @@
         android:supportsRtl="true"
         android:theme="@style/AppFullScreenTheme"
         tools:ignore="GoogleAppIndexingWarning">
-
-        <activity android:name=".activity.FaqDescriptionActivity"
-            android:screenOrientation="portrait"
-            android:exported="false"/>
-        <activity android:name=".activity.FaqOptionsActivity"
-            android:screenOrientation="portrait"
-            android:exported="false"/>
-        <activity android:name=".activity.FaqActivity"
-            android:screenOrientation="portrait"
-            android:exported="false"/>
-        <activity android:name=".activity.BluetoothDisabledActivity"
-            android:screenOrientation="portrait"
-            android:exported="false"/>
+        <activity
+            android:name=".activity.ColorChangeActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".activity.FaqDescriptionActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.FaqOptionsActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.FaqActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.BluetoothDisabledActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.SplashActivity"
+            android:exported="true"
             android:screenOrientation="portrait"
-
-            tools:ignore="LockedOrientationActivity"
-            android:exported="true">
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <!--                <data-->
-                <!--                    android:host="www.maps.google.com"-->
-                <!--                    android:scheme="https"/>-->
-                <data android:host="maps.mapmyindia.com"
-                    android:scheme="https"/>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <!-- <data -->
+                <!-- android:host="www.maps.google.com" -->
+                <!-- android:scheme="https"/> -->
+                <data
+                    android:host="maps.mapmyindia.com"
+                    android:scheme="https" />
             </intent-filter>
         </activity>
-
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -136,135 +141,125 @@
         <activity
             android:name=".activity.HomeScreenActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
+            android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustPan"
-            tools:ignore="LockedOrientationActivity"
-            android:exported="false"/>
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".activity.RouteNearByActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
-            tools:ignore="LockedOrientationActivity"
-            android:exported="false"/>
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
-            tools:ignore="LockedOrientationActivity"
-            android:exported="false"/>
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".activity.DeviceListingScanActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
-            tools:ignore="LockedOrientationActivity"
-            android:exported="false"/>
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".activity.AboutUsActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
-            tools:ignore="LockedOrientationActivity"
-            android:exported="false"/>
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".activity.TripActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
-            tools:ignore="LockedOrientationActivity"
-            android:exported="false"/>
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".activity.ImagePickerActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
-            tools:ignore="LockedOrientationActivity"
-            android:exported="false"/>
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".activity.RouteActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
+            android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustNothing"
-            tools:ignore="LockedOrientationActivity"
-            android:exported="false"/>
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".activity.NavigationActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:theme="@style/AppTheme"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:exported="false"/>
-
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.LastParkedLocationActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"
-            android:exported="false"/>
-
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.RiderProfileActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
-            android:windowSoftInputMode="adjustNothing|stateUnchanged"
-            android:exported="false"/>
+            android:windowSoftInputMode="adjustNothing|stateUnchanged" />
         <activity
             android:name=".activity.UserguideActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"
-            android:exported="false"/> <!-- <service -->
+            android:theme="@style/AppTheme" /> <!-- <service -->
         <!-- android:name=".services.MyNotificationService" -->
         <!-- android:enabled="true" /> -->
-
         <activity
             android:name=".activity.IntroscreenActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/AppFullScreenTheme"
-            android:exported="false"/>
-
+            android:theme="@style/AppFullScreenTheme" />
         <activity
             android:name=".activity.TermsActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"
-            android:exported="false"/>
-
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.PrivacyActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"
-            android:exported="false"/>
-
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.ConnectedDataActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"
-            android:exported="false"/>
-
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.HelpActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"
-            android:exported="false"/>
-
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.ProfileActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"
-            android:exported="false"/>
-
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.CreateProfileActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"
-            android:exported="false"/>
-
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.ZoomProfileImageActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"
-            android:exported="false"/>
-
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.TripDetailsActivity"
+            android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"
-            android:exported="true">
+            android:theme="@style/AppTheme">
+
             <!--
             <intent-filter>
 
@@ -283,16 +278,14 @@
             </intent-filter>
             -->
         </activity>
-
-        <activity android:name=".activity.test"
-            android:exported="false"/>
-
-
+        <activity
+            android:name=".activity.test"
+            android:exported="false" />
         <activity
             android:name=".activity.OnDisconnect"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"
-            android:exported="false"/> <!-- <service -->
+            android:theme="@style/AppTheme" /> <!-- <service -->
         <!-- android:name=".services.BluetoothLeService" -->
         <!-- android:enabled="true" /> -->
         <!-- <receiver -->
@@ -314,13 +307,12 @@
         <!-- </receiver> -->
         <receiver
             android:name=".broadcaster.IncomingSms"
-            android:exported="true"
-            android:enabled="true">
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
-
         <receiver
             android:name=".broadcaster.CallReceiverBroadcast"
             android:enabled="true"
@@ -340,11 +332,7 @@
                 <!-- <data android:scheme="mms" /> -->
                 <!-- <data android:scheme="mmsto" /> -->
             </intent-filter>
-        </receiver>
-
-
-
-        <!-- android:name=".broadcaster.IncomingCallReceiver" -->
+        </receiver> <!-- android:name=".broadcaster.IncomingCallReceiver" -->
         <!-- android:enabled="true" -->
         <!-- android:exported="true"> -->
         <!-- <intent-filter> -->
@@ -362,8 +350,6 @@
                 <!-- and some more actions if you want -->
             </intent-filter>
         </receiver>
-
-
         <receiver
             android:name=".broadcaster.MapShortDistBroadcast"
             android:enabled="true"
@@ -396,9 +382,9 @@
         <service
             android:name=".services.MyBleService"
             android:enabled="true"
-            android:exported="true"/>
-
-        <!--<service
+            android:exported="true" />
+        <!--
+<service
             android:name=".services.AccessService"
             android:enabled="true"
             android:exported="true"
@@ -414,19 +400,18 @@
         -->
         <service
             android:name=".services.NotificationService"
-            android:label="@string/app_name"
             android:exported="true"
+            android:label="@string/app_name"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
             <intent-filter>
                 <action android:name="android.service.notification.NotificationListenerService" />
             </intent-filter>
-        </service>
-
-        <!-- android:process=":externalprocess" -->
+        </service> <!-- android:process=":externalprocess" -->
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-        <!--<meta-data
+        <!--
+<meta-data
             android:name="io.fabric.ApiKey"
             android:value="f1b39a71b8085750342413b4a6f1a5cad151f894" />
         -->
@@ -434,9 +419,5 @@
             android:name="firebase_crashlytics_collection_enabled"
             android:value="true" />
     </application>
-
-    <uses-feature
-        android:name="android.hardware.camera.autofocus"
-        android:required="false" />
 
 </manifest>
