*Android 6 & 7 Speed Alert Crash issue resolved *Image loading issue resolved on Andrid 6 & 7 phones * Optimized the navigation map loading

--- a/suzuki/src/main/AndroidManifest.xml
+++ b/suzuki/src/main/AndroidManifest.xml
@@ -83,6 +83,9 @@
         android:roundIcon="@mipmap/ic_launcher_suzuki_round"
         android:supportsRtl="true"
         android:theme="@style/AppFullScreenTheme"
+
+        android:hardwareAccelerated="true"
+        android:largeHeap="true"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".activity.NavigationDeviceListingActivity"
