--- a/suzuki/build.gradle
+++ b/suzuki/build.gradle
@@ -35,7 +35,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 33
         versionCode 73
-        versionName "2.15.08.09"
+        versionName "2.15.08.09(v9.4)"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled = true
@@ -204,5 +204,5 @@ dependencies {
    // implementation 'com.mappls.sdk:navigation-camera:1.0.0'
     implementation 'com.mappls.sdk:navigation-camera:1.0.1'
 
-    implementation 'com.mappls.sdk:navigation-sdk:0.13.1'
+    implementation 'com.mappls.sdk:navigation-sdk:0.13.12'
 }
