--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 10 12:27:13 IST 2022
-sdk.dir=/Users/apple/Library/Android/sdk
+#Wed May 08 11:06:16 IST 2024
+sdk.dir=C\:\\Users\\mgowt\\AppData\\Local\\Android\\Sdk
