--- a/suzuki/build.gradle
+++ b/suzuki/build.gradle
@@ -180,7 +180,7 @@ dependencies {
 
     ///Mappls
 
-    implementation 'com.mappls.sdk:place-widget:2.0.1'
+  /*  implementation 'com.mappls.sdk:place-widget:2.0.1'
     implementation 'com.mappls.sdk:mappls-android-sdk:8.1.3'
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
@@ -204,5 +204,5 @@ dependencies {
    // implementation 'com.mappls.sdk:navigation-camera:1.0.0'
     implementation 'com.mappls.sdk:navigation-camera:1.0.1'
 
-    implementation 'com.mappls.sdk:navigation-sdk:0.13.12'
+    implementation 'com.mappls.sdk:navigation-sdk:0.13.12'*/
 }
