--- a/suzuki/build.gradle
+++ b/suzuki/build.gradle
@@ -35,7 +35,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 34
         versionCode 73
-        versionName "2.15.08.09(v9.4)"
+        versionName "2.15.08.09(v9.5)(34)"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled = true
